--- a/proportal/views/pages/proportal/clade.tt
+++ b/proportal/views/pages/proportal/clade.tt
@@ -33,10 +33,10 @@
 [%	FOREACH genus IN results.js.data.keys.sort;
 	FOREACH clade IN results.js.data.$genus.keys.sort;
 		c = results.js.data.$genus.$clade; %]
-<li data-clade-id="[% c.id %]" id="[% c.id %]" class="clade_details">
+<li id="[% c.id %]" class="clade_details">
 	<h4 class="clade-details__genus">Genus [% c.genus %]</h4>
 	<h5 class="clade-details__clade">Clade [% c.label || 'unspecified' %], [% c.genomes.size %] species</h5>
-	<p><a class="clade-details__link--genome_list_clade" href="[% link('genome_list_clade', { clade => c.label } ) %]">View species in table browser</a></p>
+	<!-- p><a class="clade-details__link--genome_list_clade" href="[% link('genome_list_clade', { clade => c.label } ) %]">View species in table browser</a></p -->
 	<ul>
 	[%		FOREACH s IN c.genomes %]
 		<li><input type="checkbox" class="sample-data__cbox" name="taxon_oid[]" value="[% s.taxon_oid %]" id="cbox_[% s.taxon_oid %]" /> <a class="clade-details__link--taxon" href="[% link('taxon', { taxon_oid => s.taxon_oid }) %]">[% s.taxon_display_name %]</a></li>
