Using new page_wrapper template

--- a/proportal/views/layouts/default.html.tt
+++ b/proportal/views/layouts/default.html.tt
@@ -27,9 +27,11 @@
 	<article class="content cf" role="main">
 [%
 	IF settings.message;
-		#PROCESS 'inc/message.tt';
+		PROCESS 'inc/message.tt';
 	END;
-	content	    # the page content
+
+	content;	# the page content
+
 %]
 	</article>
 [%
