--- a/proportal/views/pages/taxon_details.tt
+++ b/proportal/views/pages/taxon_details.tt
@@ -1,10 +1,6 @@
-[%
-	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
-	self = results.taxon;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: ' _ self.display_name;
+	self = results.taxon;
 %]
 
 <head>
@@ -52,11 +48,8 @@
 </head>
 
 <h2>[% self.display_name %]</h2>
-<h4>Alt Name(s) </h4>
-<br>
-
+<!-- h4>Alt Name(s) </h4 -->
 <div class="container-float">
-
 <!--
 <div class="row">
 <div class="col-xs-12">
