--- a/proportal/views/pages/tools/jbrowse.tt
+++ b/proportal/views/pages/tools/jbrowse.tt
@@ -1,8 +1,4 @@
-[%
-	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: JBrowse';
 %]
 <div class="floatR"><img src="http://gmod.org/mediawiki/images/thumb/a/ac/JBrowseLogo.png/250px-JBrowseLogo.png" /></div>
