--- a/proportal/views/pages/user_guide/browsing.tt
+++ b/proportal/views/pages/user_guide/browsing.tt
@@ -1,13 +1,10 @@
-[%	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'Sample Demo';
 %]
 
 <h2 id="top">Browsing Data Sets </h2>
 
-<!-- 
+<!--
  <ol>
  	<li> <a href="#1">Understanding the Analysis Cart </a></li>
  	<li> <a href="#2">Populating the Cart </a></li>
