--- a/proportal/views/403.tt
+++ b/proportal/views/403.tt
@@ -1,5 +1,5 @@
 [%
-	WRAPPER layouts/default.html.tt;
+	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: 403 Error';
 %]
 <h2>Forbidden</h2>
