--- a/proportal/views/404.tt
+++ b/proportal/views/404.tt
@@ -1,5 +1,5 @@
 [%
-	WRAPPER layouts/default.html.tt;
+	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: 404 Error';
 %]
 <h2>Page not found</h2>
