--- a/proportal/views/503.tt
+++ b/proportal/views/503.tt
@@ -1,5 +1,5 @@
 [%
-	WRAPPER layouts/default.html.tt;
+	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: 503 Error';
 %]
 <h2>Server Offline</h2>
