--- a/proportal/views/pages/demo/tree_of_life.tt
+++ b/proportal/views/pages/demo/tree_of_life.tt
@@ -1,5 +1,4 @@
-[%
-	WRAPPER layouts/default.html.tt;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: Tree of Life';
 %]
 	<h2>Tree of Life</h2>
