--- a/proportal/views/pages/phylo_heat.tt
+++ b/proportal/views/pages/phylo_heat.tt
@@ -1,5 +1,4 @@
-[%
-	WRAPPER layouts/default.html.tt;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: PhyloViewer';
 %]
 <h2>PhyloViewer (beta)</h2>
