--- a/proportal/views/pages/phylo_viewer.tt
+++ b/proportal/views/pages/phylo_viewer.tt
@@ -1,4 +1,4 @@
-[%	WRAPPER layouts/default.html.tt;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: PhyloViewer';
 	class = 'phylo_viewer';
 
