--- a/proportal/views/pages/proportal/big_ugly_taxon_table.tt
+++ b/proportal/views/pages/proportal/big_ugly_taxon_table.tt
@@ -1,8 +1,4 @@
-[%
-	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: Data Type Inventory';
 %]
 <h2>Data Type Inventory</h2>
