--- a/proportal/views/pages/proportal/ecotype.tt
+++ b/proportal/views/pages/proportal/ecotype.tt
@@ -1,7 +1,4 @@
-[%	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: Ecotype Browser';
 %]
 <h2>Sample Distribution by Ecotype</h2>
