--- a/proportal/views/pages/proportal/location.tt
+++ b/proportal/views/pages/proportal/location.tt
@@ -1,8 +1,4 @@
-[%
-	IF ! page_wrapper;
-		page_wrapper = 'layouts/default.html.tt';
-	END;
-	WRAPPER $page_wrapper;
+[%	WRAPPER 'inc/page_wrapper.tt';
 	title = 'IMG ProPortal: Location Map';
 %]
 <h2>Sample Distribution by Location</h2>
