--- a/proportal/views/pages/tools/phyloviewer.tt
+++ b/proportal/views/pages/tools/phyloviewer.tt
@@ -1,10 +1,9 @@
-[%
-	WRAPPER layouts/default.html.tt;
-	title = 'Krona';
+[%	WRAPPER 'inc/page_wrapper.tt';
+	title = 'PhyloViewer';
 %]
 
-<h2>Krona</h2>
-<p> Coming soon: run Krona here by using the Galaxy API. </p>
+<h2>PhyloViewer</h2>
+<p> Coming soon: run PhyloViewer here by using the Galaxy API. </p>
 
 
 [%	END; %]
