--- a/proportal/views/inc/nav_container.tt
+++ b/proportal/views/inc/nav_container.tt
@@ -1,6 +1,6 @@
 <div class="nav-holder">
 	<input type="checkbox" id="horiz-bar-toggle" class="nav-toggle horiz-global-toggle" />
-	<!-- this toggle shows / hides the global nav and horiz-menu in mobile view -->
+<!-- this toggle shows / hides the global nav and horiz-menu in mobile view -->
 	<div class="horiz-bar-toggle__container">
 		<label class="horiz-bar-toggle__label" for="horiz-bar-toggle">Menu</label>
 	</div>
@@ -9,9 +9,9 @@
 	PROCESS 'inc/nav_jgi_links.tt';
 %]
 </div>
-[%
-	IF navigation %]
-<input type="checkbox" id="sidebar-toggle" class="nav-toggle" />
+[%	IF show_sidebar && show_sidebar == 1 %]
+<!-- this toggles the visibility of the sidebar -->
+<input type="checkbox" id="sidebar-toggle" class="nav-toggle" checked />
 <div class="sidebar-toggle__container">
 	<label class="sidebar-toggle__label" for="sidebar-toggle">toggle sidebar</label>
 </div>
