--- a/proportal/src/css/proportal.css
+++ b/proportal/src/css/proportal.css
@@ -388,6 +388,8 @@ article {
     width: 80%;
     float: right;
     padding: 0 0.75rem; }
+  .content.full {
+    width: 100%; }
   .sidebar {
     width: 20%;
     float: left; }
