--- a/proportal/views/pages/user_guide/sample_page.tt
+++ b/proportal/views/pages/user_guide/sample_page.tt
@@ -1,4 +1,7 @@
-[%	WRAPPER 'inc/page_wrapper.tt'
+[%	IF ! page_wrapper;
+		page_wrapper = 'layouts/default.html.tt';
+	END;
+	WRAPPER $page_wrapper;
 	title = 'Sample Demo';
 %]
 	<h2>
