--- a/proportal/views/pages/user_guide/api_manual.tt
+++ b/proportal/views/pages/user_guide/api_manual.tt
@@ -4,28 +4,32 @@
 	WRAPPER $page_wrapper;
 	title = 'Sample Demo';
 %]
-
+	
 <a href="/user_guide/">< back</a>	
 <p></p>
-<h2 id="top">Searching in IMG/ProPortal </h2>
+<h2 id="top">IMG/ProPortal API Manual </h2>
 
+<!-- 
 <ol>
-	<li> <a href="#1">Advanced Search </a></li>
-	<li> <a href="#2">BLAST </a></li>
+	<li> <a href="#1">Accessing Tools from the ProPortal Interface</a></li>
+	<li> <a href="#2">Galaxy </a></li>
 </ol>
+ -->
 
 <h4>Overview</h4>
 [%	PROCESS 'inc/lorem_ipsum.tt'; %]
+<!-- 
 
-<h4 id="1">Advanced Search</h4>
+<h4 id="1">Accessing Tools from the ProPortal Interface</h4>
 [%	PROCESS 'inc/lorem_ipsum.tt'; %]
 <a href="#top">go to top </a>
 <p></p>
 
-<h4 id="2">BLAST</h4>
+<h4 id="2">Galaxy</h4>
 [%	PROCESS 'inc/lorem_ipsum.tt'; %]
+ -->
+
 <a href="#top">go to top </a>
 <p></p>
-
 
 [% END; %]
