--- a/proportal/views/pages/user_guide/using_tools.tt
+++ b/proportal/views/pages/user_guide/using_tools.tt
@@ -1,8 +1,12 @@
-[%	WRAPPER 'inc/page_wrapper.tt';
+[%	IF ! page_wrapper;
+		page_wrapper = 'layouts/default.html.tt';
+	END;
+	WRAPPER $page_wrapper;
 	title = 'Sample Demo';
 %]
-
-
+	
+<a href="/user_guide/">< back</a>	
+<p></p>
 <h2 id="top">Using Tools </h2>
 
 <ol>
