Updates to phyloviewer, destruction of DBHs, and more

--- a/proportal/public/css/proportal.css
+++ b/proportal/public/css/proportal.css
@@ -2532,8 +2532,8 @@ article {
   .content {
     width: 80%;
     float: right;
-    padding: 0 12px;
-    padding: 0 0.75rem; }
+    padding: 24px 12px;
+    padding: 1.5rem 0.75rem; }
   .content.full {
     width: 100%; }
   .sidebar {
