--- a/proportal/src/css/sass/partials/_layout.scss
+++ b/proportal/src/css/sass/partials/_layout.scss
@@ -30,7 +30,7 @@ article {
 	.content { // article
 		width: 100% - $sidebar-width;
 		float: right;
-		padding: 0 $gutter;
+		padding: $line-ht $gutter;
 	}
 
 	.content.full {
