--- a/proportal/views/inc/page_head.tt
+++ b/proportal/views/inc/page_head.tt
@@ -1,4 +1,4 @@
-	<link rel="stylesheet" type="text/css" href="[% settings.pp_assets %]css/proportal.css">
+	<link rel="stylesheet" type="text/css" href="/css/proportal.css">
 
 	<meta charset="UTF-8">
 	<!-- link href="//www.google-analytics.com" rel="dns-prefetch" -->
@@ -6,4 +6,4 @@
 	<link href="http://jgi.doe.gov/favicon.ico" rel="shortcut icon">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Some information about the IMG ProPortal here">
+	<meta name="description" content="The IMG ProPortal provides data and visualisations on Prochlorococcus, Synechococcus, and related species and metagenome data.">
