--- a/proportal/views/scripts/clade.tt
+++ b/proportal/views/scripts/clade.tt
@@ -434,7 +434,7 @@ function fn(){
 
 	makeBarChart( res, svg );
 
-	var WIDTH_IN_PERCENT_OF_PARENT = 90
+/*	var WIDTH_IN_PERCENT_OF_PARENT = 90
 	, HEIGHT_IN_PERCENT_OF_PARENT = 80
 
 	, gd3 = Plotly.d3.select('#plotly')
@@ -477,7 +477,7 @@ function fn(){
 	window.onresize = function() {
 		Plotly.Plots.resize(gd);
 	};
-
+*/
 }
 /* end insert */
 	if (document.readyState !== 'loading'){
